GlebParser.cpp

// Generated from /home/Gleb/GlebParser.g4 by ANTLR 4.9.1


#include "GlebParserVisitor.h"

#include "GlebParser.h"


/* parser postinclude section */
#ifndef _WIN32
#pragma GCC diagnostic ignored "-Wunused-parameter"
#endif


using namespace antlrcpp;
using namespace antlrcpptest;
using namespace antlr4;

GlebParser::GlebParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

GlebParser::~GlebParser() {
  delete _interpreter;
}

std::string GlebParser::getGrammarFileName() const {
  return "GlebParser.g4";
}

const std::vector<std::string>& GlebParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& GlebParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- MainContext ------------------------------------------------------------------

GlebParser::MainContext::MainContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<GlebParser::MathContext *> GlebParser::MainContext::math() {
  return getRuleContexts<GlebParser::MathContext>();
}

GlebParser::MathContext* GlebParser::MainContext::math(size_t i) {
  return getRuleContext<GlebParser::MathContext>(i);
}

std::vector<GlebParser::ExprContext *> GlebParser::MainContext::expr() {
  return getRuleContexts<GlebParser::ExprContext>();
}

GlebParser::ExprContext* GlebParser::MainContext::expr(size_t i) {
  return getRuleContext<GlebParser::ExprContext>(i);
}

std::vector<tree::TerminalNode *> GlebParser::MainContext::Newline() {
  return getTokens(GlebParser::Newline);
}

tree::TerminalNode* GlebParser::MainContext::Newline(size_t i) {
  return getToken(GlebParser::Newline, i);
}


size_t GlebParser::MainContext::getRuleIndex() const {
  return GlebParser::RuleMain;
}


antlrcpp::Any GlebParser::MainContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GlebParserVisitor*>(visitor))
    return parserVisitor->visitMain(this);
  else
    return visitor->visitChildren(this);
}

GlebParser::MainContext* GlebParser::main() {
  MainContext *_localctx = _tracker.createInstance<MainContext>(_ctx, getState());
  enterRule(_localctx, 0, GlebParser::RuleMain);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(49);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << GlebParser::Integer)
      | (1ULL << GlebParser::Float)
      | (1ULL << GlebParser::For)
      | (1ULL << GlebParser::IF)
      | (1ULL << GlebParser::FigureOpen)
      | (1ULL << GlebParser::ID))) != 0)) {
      setState(42);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case GlebParser::Integer:
        case GlebParser::Float:
        case GlebParser::ID: {
          setState(40);
          math();
          break;
        }

        case GlebParser::For:
        case GlebParser::IF:
        case GlebParser::FigureOpen: {
          setState(41);
          expr();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(45);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == GlebParser::Newline) {
        setState(44);
        match(GlebParser::Newline);
      }
      setState(51);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SummOperationContext ------------------------------------------------------------------

GlebParser::SummOperationContext::SummOperationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> GlebParser::SummOperationContext::ID() {
  return getTokens(GlebParser::ID);
}

tree::TerminalNode* GlebParser::SummOperationContext::ID(size_t i) {
  return getToken(GlebParser::ID, i);
}

tree::TerminalNode* GlebParser::SummOperationContext::Assign() {
  return getToken(GlebParser::Assign, 0);
}

tree::TerminalNode* GlebParser::SummOperationContext::Plus() {
  return getToken(GlebParser::Plus, 0);
}

std::vector<tree::TerminalNode *> GlebParser::SummOperationContext::INT() {
  return getTokens(GlebParser::INT);
}

tree::TerminalNode* GlebParser::SummOperationContext::INT(size_t i) {
  return getToken(GlebParser::INT, i);
}

std::vector<tree::TerminalNode *> GlebParser::SummOperationContext::FLT() {
  return getTokens(GlebParser::FLT);
}

tree::TerminalNode* GlebParser::SummOperationContext::FLT(size_t i) {
  return getToken(GlebParser::FLT, i);
}

std::vector<GlebParser::OperationContext *> GlebParser::SummOperationContext::operation() {
  return getRuleContexts<GlebParser::OperationContext>();
}

GlebParser::OperationContext* GlebParser::SummOperationContext::operation(size_t i) {
  return getRuleContext<GlebParser::OperationContext>(i);
}

tree::TerminalNode* GlebParser::SummOperationContext::PlusAss() {
  return getToken(GlebParser::PlusAss, 0);
}


size_t GlebParser::SummOperationContext::getRuleIndex() const {
  return GlebParser::RuleSummOperation;
}


antlrcpp::Any GlebParser::SummOperationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GlebParserVisitor*>(visitor))
    return parserVisitor->visitSummOperation(this);
  else
    return visitor->visitChildren(this);
}

GlebParser::SummOperationContext* GlebParser::summOperation() {
  SummOperationContext *_localctx = _tracker.createInstance<SummOperationContext>(_ctx, getState());
  enterRule(_localctx, 2, GlebParser::RuleSummOperation);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(75);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(52);
      match(GlebParser::ID);
      setState(53);
      match(GlebParser::Assign);
      setState(58);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
      case 1: {
        setState(54);
        match(GlebParser::ID);
        break;
      }

      case 2: {
        setState(55);
        match(GlebParser::INT);
        break;
      }

      case 3: {
        setState(56);
        match(GlebParser::FLT);
        break;
      }

      case 4: {
        setState(57);
        operation();
        break;
      }

      default:
        break;
      }
      setState(60);
      match(GlebParser::Plus);
      setState(65);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
      case 1: {
        setState(61);
        match(GlebParser::ID);
        break;
      }

      case 2: {
        setState(62);
        match(GlebParser::INT);
        break;
      }

      case 3: {
        setState(63);
        match(GlebParser::FLT);
        break;
      }

      case 4: {
        setState(64);
        operation();
        break;
      }

      default:
        break;
      }
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(67);
      match(GlebParser::ID);
      setState(68);
      match(GlebParser::PlusAss);
      setState(73);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
      case 1: {
        setState(69);
        match(GlebParser::ID);
        break;
      }

      case 2: {
        setState(70);
        match(GlebParser::INT);
        break;
      }

      case 3: {
        setState(71);
        match(GlebParser::FLT);
        break;
      }

      case 4: {
        setState(72);
        operation();
        break;
      }

      default:
        break;
      }
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SummContext ------------------------------------------------------------------

GlebParser::SummContext::SummContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GlebParser::SummContext::OpenPar() {
  return getToken(GlebParser::OpenPar, 0);
}

tree::TerminalNode* GlebParser::SummContext::Plus() {
  return getToken(GlebParser::Plus, 0);
}

tree::TerminalNode* GlebParser::SummContext::ClosePar() {
  return getToken(GlebParser::ClosePar, 0);
}

std::vector<tree::TerminalNode *> GlebParser::SummContext::ID() {
  return getTokens(GlebParser::ID);
}

tree::TerminalNode* GlebParser::SummContext::ID(size_t i) {
  return getToken(GlebParser::ID, i);
}

std::vector<tree::TerminalNode *> GlebParser::SummContext::INT() {
  return getTokens(GlebParser::INT);
}

tree::TerminalNode* GlebParser::SummContext::INT(size_t i) {
  return getToken(GlebParser::INT, i);
}

std::vector<tree::TerminalNode *> GlebParser::SummContext::FLT() {
  return getTokens(GlebParser::FLT);
}

tree::TerminalNode* GlebParser::SummContext::FLT(size_t i) {
  return getToken(GlebParser::FLT, i);
}

std::vector<GlebParser::OperationContext *> GlebParser::SummContext::operation() {
  return getRuleContexts<GlebParser::OperationContext>();
}

GlebParser::OperationContext* GlebParser::SummContext::operation(size_t i) {
  return getRuleContext<GlebParser::OperationContext>(i);
}


size_t GlebParser::SummContext::getRuleIndex() const {
  return GlebParser::RuleSumm;
}


antlrcpp::Any GlebParser::SummContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GlebParserVisitor*>(visitor))
    return parserVisitor->visitSumm(this);
  else
    return visitor->visitChildren(this);
}

GlebParser::SummContext* GlebParser::summ() {
  SummContext *_localctx = _tracker.createInstance<SummContext>(_ctx, getState());
  enterRule(_localctx, 4, GlebParser::RuleSumm);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(77);
    match(GlebParser::OpenPar);
    setState(82);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      setState(78);
      match(GlebParser::ID);
      break;
    }

    case 2: {
      setState(79);
      match(GlebParser::INT);
      break;
    }

    case 3: {
      setState(80);
      match(GlebParser::FLT);
      break;
    }

    case 4: {
      setState(81);
      operation();
      break;
    }

    default:
      break;
    }
    setState(84);
    match(GlebParser::Plus);
    setState(89);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      setState(85);
      match(GlebParser::ID);
      break;
    }

    case 2: {
      setState(86);
      match(GlebParser::INT);
      break;
    }

    case 3: {
      setState(87);
      match(GlebParser::FLT);
      break;
    }

    case 4: {
      setState(88);
      operation();
      break;
    }

    default:
      break;
    }
    setState(91);
    match(GlebParser::ClosePar);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DiffOperationContext ------------------------------------------------------------------

GlebParser::DiffOperationContext::DiffOperationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> GlebParser::DiffOperationContext::ID() {
  return getTokens(GlebParser::ID);
}

tree::TerminalNode* GlebParser::DiffOperationContext::ID(size_t i) {
  return getToken(GlebParser::ID, i);
}

tree::TerminalNode* GlebParser::DiffOperationContext::Assign() {
  return getToken(GlebParser::Assign, 0);
}

tree::TerminalNode* GlebParser::DiffOperationContext::Minus() {
  return getToken(GlebParser::Minus, 0);
}

std::vector<tree::TerminalNode *> GlebParser::DiffOperationContext::INT() {
  return getTokens(GlebParser::INT);
}

tree::TerminalNode* GlebParser::DiffOperationContext::INT(size_t i) {
  return getToken(GlebParser::INT, i);
}

std::vector<tree::TerminalNode *> GlebParser::DiffOperationContext::FLT() {
  return getTokens(GlebParser::FLT);
}

tree::TerminalNode* GlebParser::DiffOperationContext::FLT(size_t i) {
  return getToken(GlebParser::FLT, i);
}

std::vector<GlebParser::OperationContext *> GlebParser::DiffOperationContext::operation() {
  return getRuleContexts<GlebParser::OperationContext>();
}

GlebParser::OperationContext* GlebParser::DiffOperationContext::operation(size_t i) {
  return getRuleContext<GlebParser::OperationContext>(i);
}

tree::TerminalNode* GlebParser::DiffOperationContext::MinusAss() {
  return getToken(GlebParser::MinusAss, 0);
}


size_t GlebParser::DiffOperationContext::getRuleIndex() const {
  return GlebParser::RuleDiffOperation;
}


antlrcpp::Any GlebParser::DiffOperationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GlebParserVisitor*>(visitor))
    return parserVisitor->visitDiffOperation(this);
  else
    return visitor->visitChildren(this);
}

GlebParser::DiffOperationContext* GlebParser::diffOperation() {
  DiffOperationContext *_localctx = _tracker.createInstance<DiffOperationContext>(_ctx, getState());
  enterRule(_localctx, 6, GlebParser::RuleDiffOperation);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(116);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(93);
      match(GlebParser::ID);
      setState(94);
      match(GlebParser::Assign);
      setState(99);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
      case 1: {
        setState(95);
        match(GlebParser::ID);
        break;
      }

      case 2: {
        setState(96);
        match(GlebParser::INT);
        break;
      }

      case 3: {
        setState(97);
        match(GlebParser::FLT);
        break;
      }

      case 4: {
        setState(98);
        operation();
        break;
      }

      default:
        break;
      }
      setState(101);
      match(GlebParser::Minus);
      setState(106);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
      case 1: {
        setState(102);
        match(GlebParser::ID);
        break;
      }

      case 2: {
        setState(103);
        match(GlebParser::INT);
        break;
      }

      case 3: {
        setState(104);
        match(GlebParser::FLT);
        break;
      }

      case 4: {
        setState(105);
        operation();
        break;
      }

      default:
        break;
      }
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(108);
      match(GlebParser::ID);
      setState(109);
      match(GlebParser::MinusAss);
      setState(114);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx)) {
      case 1: {
        setState(110);
        match(GlebParser::ID);
        break;
      }

      case 2: {
        setState(111);
        match(GlebParser::INT);
        break;
      }

      case 3: {
        setState(112);
        match(GlebParser::FLT);
        break;
      }

      case 4: {
        setState(113);
        operation();
        break;
      }

      default:
        break;
      }
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DiffContext ------------------------------------------------------------------

GlebParser::DiffContext::DiffContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GlebParser::DiffContext::OpenPar() {
  return getToken(GlebParser::OpenPar, 0);
}

tree::TerminalNode* GlebParser::DiffContext::Minus() {
  return getToken(GlebParser::Minus, 0);
}

tree::TerminalNode* GlebParser::DiffContext::ClosePar() {
  return getToken(GlebParser::ClosePar, 0);
}

std::vector<tree::TerminalNode *> GlebParser::DiffContext::ID() {
  return getTokens(GlebParser::ID);
}

tree::TerminalNode* GlebParser::DiffContext::ID(size_t i) {
  return getToken(GlebParser::ID, i);
}

std::vector<tree::TerminalNode *> GlebParser::DiffContext::INT() {
  return getTokens(GlebParser::INT);
}

tree::TerminalNode* GlebParser::DiffContext::INT(size_t i) {
  return getToken(GlebParser::INT, i);
}

std::vector<tree::TerminalNode *> GlebParser::DiffContext::FLT() {
  return getTokens(GlebParser::FLT);
}

tree::TerminalNode* GlebParser::DiffContext::FLT(size_t i) {
  return getToken(GlebParser::FLT, i);
}

std::vector<GlebParser::OperationContext *> GlebParser::DiffContext::operation() {
  return getRuleContexts<GlebParser::OperationContext>();
}

GlebParser::OperationContext* GlebParser::DiffContext::operation(size_t i) {
  return getRuleContext<GlebParser::OperationContext>(i);
}


size_t GlebParser::DiffContext::getRuleIndex() const {
  return GlebParser::RuleDiff;
}


antlrcpp::Any GlebParser::DiffContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GlebParserVisitor*>(visitor))
    return parserVisitor->visitDiff(this);
  else
    return visitor->visitChildren(this);
}

GlebParser::DiffContext* GlebParser::diff() {
  DiffContext *_localctx = _tracker.createInstance<DiffContext>(_ctx, getState());
  enterRule(_localctx, 8, GlebParser::RuleDiff);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(118);
    match(GlebParser::OpenPar);
    setState(123);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 13, _ctx)) {
    case 1: {
      setState(119);
      match(GlebParser::ID);
      break;
    }

    case 2: {
      setState(120);
      match(GlebParser::INT);
      break;
    }

    case 3: {
      setState(121);
      match(GlebParser::FLT);
      break;
    }

    case 4: {
      setState(122);
      operation();
      break;
    }

    default:
      break;
    }
    setState(125);
    match(GlebParser::Minus);
    setState(130);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 14, _ctx)) {
    case 1: {
      setState(126);
      match(GlebParser::ID);
      break;
    }

    case 2: {
      setState(127);
      match(GlebParser::INT);
      break;
    }

    case 3: {
      setState(128);
      match(GlebParser::FLT);
      break;
    }

    case 4: {
      setState(129);
      operation();
      break;
    }

    default:
      break;
    }
    setState(132);
    match(GlebParser::ClosePar);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MultOperationContext ------------------------------------------------------------------

GlebParser::MultOperationContext::MultOperationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> GlebParser::MultOperationContext::ID() {
  return getTokens(GlebParser::ID);
}

tree::TerminalNode* GlebParser::MultOperationContext::ID(size_t i) {
  return getToken(GlebParser::ID, i);
}

tree::TerminalNode* GlebParser::MultOperationContext::Assign() {
  return getToken(GlebParser::Assign, 0);
}

tree::TerminalNode* GlebParser::MultOperationContext::Star() {
  return getToken(GlebParser::Star, 0);
}

std::vector<tree::TerminalNode *> GlebParser::MultOperationContext::INT() {
  return getTokens(GlebParser::INT);
}

tree::TerminalNode* GlebParser::MultOperationContext::INT(size_t i) {
  return getToken(GlebParser::INT, i);
}

std::vector<tree::TerminalNode *> GlebParser::MultOperationContext::FLT() {
  return getTokens(GlebParser::FLT);
}

tree::TerminalNode* GlebParser::MultOperationContext::FLT(size_t i) {
  return getToken(GlebParser::FLT, i);
}

std::vector<GlebParser::OperationContext *> GlebParser::MultOperationContext::operation() {
  return getRuleContexts<GlebParser::OperationContext>();
}

GlebParser::OperationContext* GlebParser::MultOperationContext::operation(size_t i) {
  return getRuleContext<GlebParser::OperationContext>(i);
}

tree::TerminalNode* GlebParser::MultOperationContext::StarAss() {
  return getToken(GlebParser::StarAss, 0);
}


size_t GlebParser::MultOperationContext::getRuleIndex() const {
  return GlebParser::RuleMultOperation;
}


antlrcpp::Any GlebParser::MultOperationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GlebParserVisitor*>(visitor))
    return parserVisitor->visitMultOperation(this);
  else
    return visitor->visitChildren(this);
}

GlebParser::MultOperationContext* GlebParser::multOperation() {
  MultOperationContext *_localctx = _tracker.createInstance<MultOperationContext>(_ctx, getState());
  enterRule(_localctx, 10, GlebParser::RuleMultOperation);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(157);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 18, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(134);
      match(GlebParser::ID);
      setState(135);
      match(GlebParser::Assign);
      setState(140);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 15, _ctx)) {
      case 1: {
        setState(136);
        match(GlebParser::ID);
        break;
      }

      case 2: {
        setState(137);
        match(GlebParser::INT);
        break;
      }

      case 3: {
        setState(138);
        match(GlebParser::FLT);
        break;
      }

      case 4: {
        setState(139);
        operation();
        break;
      }

      default:
        break;
      }
      setState(142);
      match(GlebParser::Star);
      setState(147);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 16, _ctx)) {
      case 1: {
        setState(143);
        match(GlebParser::ID);
        break;
      }

      case 2: {
        setState(144);
        match(GlebParser::INT);
        break;
      }

      case 3: {
        setState(145);
        match(GlebParser::FLT);
        break;
      }

      case 4: {
        setState(146);
        operation();
        break;
      }

      default:
        break;
      }
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(149);
      match(GlebParser::ID);
      setState(150);
      match(GlebParser::StarAss);
      setState(155);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 17, _ctx)) {
      case 1: {
        setState(151);
        match(GlebParser::ID);
        break;
      }

      case 2: {
        setState(152);
        match(GlebParser::INT);
        break;
      }

      case 3: {
        setState(153);
        match(GlebParser::FLT);
        break;
      }

      case 4: {
        setState(154);
        operation();
        break;
      }

      default:
        break;
      }
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MultContext ------------------------------------------------------------------

GlebParser::MultContext::MultContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GlebParser::MultContext::OpenPar() {
  return getToken(GlebParser::OpenPar, 0);
}

tree::TerminalNode* GlebParser::MultContext::Star() {
  return getToken(GlebParser::Star, 0);
}

tree::TerminalNode* GlebParser::MultContext::ClosePar() {
  return getToken(GlebParser::ClosePar, 0);
}

std::vector<tree::TerminalNode *> GlebParser::MultContext::ID() {
  return getTokens(GlebParser::ID);
}

tree::TerminalNode* GlebParser::MultContext::ID(size_t i) {
  return getToken(GlebParser::ID, i);
}

std::vector<tree::TerminalNode *> GlebParser::MultContext::INT() {
  return getTokens(GlebParser::INT);
}

tree::TerminalNode* GlebParser::MultContext::INT(size_t i) {
  return getToken(GlebParser::INT, i);
}

std::vector<tree::TerminalNode *> GlebParser::MultContext::FLT() {
  return getTokens(GlebParser::FLT);
}

tree::TerminalNode* GlebParser::MultContext::FLT(size_t i) {
  return getToken(GlebParser::FLT, i);
}

std::vector<GlebParser::OperationContext *> GlebParser::MultContext::operation() {
  return getRuleContexts<GlebParser::OperationContext>();
}

GlebParser::OperationContext* GlebParser::MultContext::operation(size_t i) {
  return getRuleContext<GlebParser::OperationContext>(i);
}


size_t GlebParser::MultContext::getRuleIndex() const {
  return GlebParser::RuleMult;
}


antlrcpp::Any GlebParser::MultContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GlebParserVisitor*>(visitor))
    return parserVisitor->visitMult(this);
  else
    return visitor->visitChildren(this);
}

GlebParser::MultContext* GlebParser::mult() {
  MultContext *_localctx = _tracker.createInstance<MultContext>(_ctx, getState());
  enterRule(_localctx, 12, GlebParser::RuleMult);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(159);
    match(GlebParser::OpenPar);
    setState(164);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 19, _ctx)) {
    case 1: {
      setState(160);
      match(GlebParser::ID);
      break;
    }

    case 2: {
      setState(161);
      match(GlebParser::INT);
      break;
    }

    case 3: {
      setState(162);
      match(GlebParser::FLT);
      break;
    }

    case 4: {
      setState(163);
      operation();
      break;
    }

    default:
      break;
    }
    setState(166);
    match(GlebParser::Star);
    setState(171);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 20, _ctx)) {
    case 1: {
      setState(167);
      match(GlebParser::ID);
      break;
    }

    case 2: {
      setState(168);
      match(GlebParser::INT);
      break;
    }

    case 3: {
      setState(169);
      match(GlebParser::FLT);
      break;
    }

    case 4: {
      setState(170);
      operation();
      break;
    }

    default:
      break;
    }
    setState(173);
    match(GlebParser::ClosePar);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DivOperationContext ------------------------------------------------------------------

GlebParser::DivOperationContext::DivOperationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> GlebParser::DivOperationContext::ID() {
  return getTokens(GlebParser::ID);
}

tree::TerminalNode* GlebParser::DivOperationContext::ID(size_t i) {
  return getToken(GlebParser::ID, i);
}

tree::TerminalNode* GlebParser::DivOperationContext::Assign() {
  return getToken(GlebParser::Assign, 0);
}

tree::TerminalNode* GlebParser::DivOperationContext::Devide() {
  return getToken(GlebParser::Devide, 0);
}

std::vector<tree::TerminalNode *> GlebParser::DivOperationContext::INT() {
  return getTokens(GlebParser::INT);
}

tree::TerminalNode* GlebParser::DivOperationContext::INT(size_t i) {
  return getToken(GlebParser::INT, i);
}

std::vector<tree::TerminalNode *> GlebParser::DivOperationContext::FLT() {
  return getTokens(GlebParser::FLT);
}

tree::TerminalNode* GlebParser::DivOperationContext::FLT(size_t i) {
  return getToken(GlebParser::FLT, i);
}

std::vector<GlebParser::OperationContext *> GlebParser::DivOperationContext::operation() {
  return getRuleContexts<GlebParser::OperationContext>();
}

GlebParser::OperationContext* GlebParser::DivOperationContext::operation(size_t i) {
  return getRuleContext<GlebParser::OperationContext>(i);
}

tree::TerminalNode* GlebParser::DivOperationContext::DevideAss() {
  return getToken(GlebParser::DevideAss, 0);
}


size_t GlebParser::DivOperationContext::getRuleIndex() const {
  return GlebParser::RuleDivOperation;
}


antlrcpp::Any GlebParser::DivOperationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GlebParserVisitor*>(visitor))
    return parserVisitor->visitDivOperation(this);
  else
    return visitor->visitChildren(this);
}

GlebParser::DivOperationContext* GlebParser::divOperation() {
  DivOperationContext *_localctx = _tracker.createInstance<DivOperationContext>(_ctx, getState());
  enterRule(_localctx, 14, GlebParser::RuleDivOperation);
